# gamekit-playground-src

./: CMakeLists.txt  _build_playground.sh  _clone_deps.sh  _recreate_addon.sh  _rewire.sh  readme.txt
Addons/: CMakeLists.txt
Addons/Addon/: CMakeLists.txt  GameAddon.cpp  GameAddon.h  GameServer.cpp  GameServer.h  test.proto  test.proto_old
Addons/Addon/script/: ttScript.cpp  ttScript.h
Addons/AddonThrift/: CMakeLists.txt  ThriftAddon.cpp  ThriftAddon.h  gameserver.thrift  gkThriftManager.cpp  gkThriftManager.h
Addons/AddonThrift/script/: ttScript.cpp  ttScript.h  ttScript.i
Addons/DefaultAddon/: CMakeLists.txt  DefaultGameAddon.cpp  DefaultGameAddon.h  readme.addon
Addons/DefaultAddon/lua/: default.lua
Addons/DefaultAddon/script/: ttScript.cpp  ttScript.h  ttScript.i
BNodes/out-src/: CMakeLists.txt
Dependencies/Source/Codecs/: CMakeLists.txt
Dependencies/Source/CppTweener/: CMakeLists.txt
Dependencies/Source/Enet/: CMakeLists.txt
Dependencies/Source/GUI3D/: CMakeLists.txt  rewire.sh
Dependencies/Source/RecastDetour/: CMakeLists.txt  rewire.sh
Engine/: CMakeLists.txt  _CMakeLists.txt  gkAddon.cpp  gkAddon.h  gkBone.cpp  gkBone.h  gkCamera.cpp  gkCommon.h  gkCoreApplication.cpp  gkCrypt.cpp  gkCrypt.h  gkCurve.cpp  gkCurve.h  gkDebugFps.cpp  gkDebugScreen.cpp  gkDebugScreen.h  gkDebugger.cpp  gkDebugger.h  gkEngine.cpp  gkEngine.h  gkEntity.cpp  gkEntity.h  gkEventManager.cpp  gkEventManager.h  gkFont.cpp  gkFont.h  gkFontManager.cpp  gkGameObject.cpp  gkGameObject.h  gkGameObjectGroup.cpp  gkGameObjectGroup.h  gkGameObjectInstance.cpp  gkGroupManager.cpp  gkGroupManager.h  gkInput.h  gkInstancedManager.cpp  gkLight.cpp  gkLight.h  gkLogger.cpp  gkLogger.h  (+38 more)
Engine/AI/: gkFSM.cpp  gkFSM.h  gkNavMeshData.cpp  gkNavMeshData.h  gkNavPath.cpp  gkNavPath.h  gkRecast.cpp  gkRecast.h  gkSceneObstacle.cpp  gkSceneObstacle.h  gkSteeringCapture.cpp  gkSteeringCapture.h  gkSteeringObject.cpp  gkSteeringObject.h  gkSteeringPathFollowing.cpp  gkSteeringPathFollowing.h  gkSteeringWander.cpp  gkSteeringWander.h
Engine/Android/: gkWindowAndroid.cpp  gkWindowAndroid.h
Engine/Animation/: gkAnimation.h  gkAnimationManager.h
Engine/Blackberry/: gkWindowBlackBerry.cpp  gkWindowBlackBerry.h
Engine/Emscripten/: gkWindowEmscripten.cpp  gkWindowEmscripten.h
Engine/Events/: gkEvents.cpp  gkEvents.h
Engine/GUI/: gkGUI.cpp  gkGUI.h  gkGUIManager.cpp  gkGUIManager.h
Engine/GUI/GUI3D/: gkGUI3D.cpp  gkGUI3D.h
Engine/GUI/rocket/: DecoratorAtlasImage.cpp  DecoratorAtlasImage.h  DecoratorTween.cpp  DecoratorTween.h  DecoratorTweenInstancer.cpp  DecoratorTweenInstancer.h  FileInterfaceOgre3D.cpp  NewRenderInterfaceOgre3D.cpp  NewRenderInterfaceOgre3D.h  NewRocketRenderListener.cpp  NewRocketRenderListener.h  RenderInterfaceOgre3D.cpp  RenderInterfaceOgre3D.cpp_gles2  RenderInterfaceOgre3D.h  RenderInterfaceOgre3D.h_gles2  RocketEventListener.cpp  RocketEventListener.h  RocketRenderListener.cpp  SystemInterfaceOgre3D.cpp  SystemInterfaceOgre3D.h  gkGUIDocumentRocket.cpp  gkGUIDocumentRocket.h
Engine/Loaders/Blender2/: CMakeLists.txt  gkBlendFile.cpp  gkBlendFile.h  gkBlendInternalFile.cpp  gkBlendInternalFile.h  gkBlendLoader.cpp  gkBlendLoader.h  gkBlenderSceneConverter.cpp  gkBlenderSceneConverter.h  gkNodeInstancerTemplate.h  gkNodeTreeConverter.cpp  gkNodeTreeConverter.h  gkTextureLoader.cpp  gkTextureLoader.h
Engine/Logic/: gkButtonNode.cpp  gkButtonNode.h  gkCameraNode.cpp  gkCameraNode.h  gkCharacterNode.cpp  gkCharacterNode.h  gkCollisionNode.cpp  gkCollisionNode.h  gkCursorNode.cpp  gkCursorNode.h  gkEulerToQuaternionNode.h  gkExitNode.cpp  gkExitNode.h  gkFunctionNode.h  gkGrabNode.cpp  gkGrabNode.h  gkGroupNode.cpp  gkGroupNode.h  gkIfNode.h  gkLogicCommon.h  gkLogicNode.cpp  gkLogicNode.h  gkLogicSocket.cpp  gkLogicSocket.h  gkLogicTree.cpp  gkLogicTree.h  gkMapNode.h  gkMathNode.h  gkMotionNode.cpp  gkMotionNode.h  gkMouseNode.cpp  gkMouseNode.h  gkMultiplexerNode.h  gkNodeManager.cpp  gkNodeManager.h  gkObjectNode.cpp  gkObjectNode.h  gkParticleNode.cpp  gkParticleNode.h  gkPickNode.cpp  (+24 more)
Engine/LogicBricks/: gkActionActuator.cpp  gkActionActuator.h  gkCollisionSensor.h  gkEditObjectActuator.cpp  gkExpressionController.cpp  gkExpressionController.h  gkMessageSensor.cpp  gkMouseSensor.cpp  gkRadarSensor.cpp  gkRadarSensor.h  gkRaySensor.cpp  gkRaySensor.h  gkSceneActuator.cpp  gkScriptController.cpp
Engine/Network/: CMakeLists.txt  gkDownloadManager.cpp  gkDownloadManager.h  gkMessageNetForwarder.cpp  gkMessageNetForwarder.h  gkNetSerialize.cpp  gkNetSerialize.h  gkNetworkManager.h  gkNetworkServerThread.cpp  gkNetworkServerThread.h
Engine/Network/Enet/: gkENetNetworkManager.cpp
Engine/Particles/: gkParticleManager.cpp
Engine/Particles/Ogre/: gkOgreParticleAffector.cpp  gkOgreParticleEmitter.cpp
Engine/Physics/: gkCharacter.cpp  gkDynamicsWorld.cpp  gkDynamicsWorld.h  gkGhost.cpp  gkGhost.h  gkPhysicsController.cpp  gkPhysicsController.h  gkRayTest.cpp  gkRayTest.h  gkRigidBody.cpp  gkRigidBody.h  gkSweptTest.cpp  gkSweptTest.h  gkVehicle.cpp  gkVehicle.h
Engine/Process/: gkParallelProcess.cpp  gkSequenceProcess.cpp  gkSoundProcess.cpp
Engine/Script/Api/: OgreKit.i  customNodes  gsAI.cpp  gsAI.h  gsAI.i  gsAnimation.cpp  gsAnimation.h  gsAnimation.i  gsBricks.cpp  gsBricks.h  gsCommon.h  gsCore.cpp  gsCore.h  gsCore.i  gsGUI.cpp  gsGUI.h  gsGUI.i  gsGUI3D.cpp  gsGUI3D.h  gsGUI3D.i  gsMath.cpp  gsMath.h  gsMath.i  gsNetwork.cpp  gsNetwork.h  gsNetwork.i  gsNodes.cpp  gsNodes.h  (+11 more)
Engine/Sound/: gkBuffer.cpp  gkOgg.cpp  gkOgg.h  gkSoundManager.cpp  gkSoundManager.h  gkSoundUtil.h  gkSource.cpp  gkSource.h  gkStreamer.cpp  gkStreamer.h  gkWaveform.cpp  gkWaveform.h
Engine/Thread/: gkActiveObject.cpp  gkActiveObject.h  gkCriticalSection.cpp  gkCriticalSection.h  gkQueue.h  gkSyncObj.cpp  gkSyncObj.h  gkThread.cpp  gkThread.h
Engine/User/: RTShaderLib.zip_  gkCodescripts.inl  gkCompositorTemplates.inl  gkMaterials.inl  gkRTShaderTemplates.inl  misc.material
Samples/Runtime/: CMakeLists.txt  Main.cpp
Samples/gkTests/: CMakeLists.txt  main.cpp
(+565 files in other folders)
